--- a/Java/AppClientes/app/src/main/res/layout/activity_cadastro.xml
+++ b/Java/AppClientes/app/src/main/res/layout/activity_cadastro.xml
@@ -77,6 +77,17 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
+                    <EditText android:id="@+id/editCpfCnpj"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:gravity="left"
+                        android:hint="CPF/CNPJ"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
                     <EditText android:id="@+id/editCadastroEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
