--- a/Java/AppClientes/app/src/main/res/layout/activity_cadastro.xml
+++ b/Java/AppClientes/app/src/main/res/layout/activity_cadastro.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".view.CadastroActivity">
 
     <ScrollView
@@ -66,6 +67,14 @@
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
+                    <androidx.appcompat.widget.SwitchCompat android:id="@+id/switchPjPF"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layoutDirection="rtl"
+                        android:text="Pessoa Física"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
                     <EditText android:id="@+id/editNomeCompleto"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -84,7 +93,29 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:gravity="left"
-                        android:hint="CPF/CNPJ"
+                        android:hint="CPF"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <EditText android:id="@+id/editEndereco"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:gravity="left"
+                        android:hint="Logradouro"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <EditText android:id="@+id/editComplementoEnd"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:gravity="left"
+                        android:hint="Complemento"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
@@ -124,6 +155,8 @@
                         android:inputType="textWebPassword"
                         android:textSize="18sp"
                         android:textStyle="bold" />
+
+
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.cardview.widget.CardView>
 
@@ -138,22 +171,13 @@
                     android:layout_margin="16dp"
                     android:orientation="vertical">
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnConfirmarCadastro"
+                    <androidx.appcompat.widget.AppCompatButton android:id="@+id/btnConfirmarCadastro"
                         style="@style/CustomizeButton"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/bntConfirmar_Cadastro" />
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnVoltarCadastro"
-                        style="@style/CustomizeButton"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/btnVoltar_Cadastro" />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnCancelar"
+                    <androidx.appcompat.widget.AppCompatButton android:id="@+id/btnCancelar"
                         style="@style/CustomizeButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
