--- a/Java/AppClientes/app/src/main/res/values/styles.xml
+++ b/Java/AppClientes/app/src/main/res/values/styles.xml
@@ -25,4 +25,13 @@
         <item name="android:textColor">@color/bg_color_dark_theme</item>
         <item name="backgroundTint">@color/splash_bgr</item>
     </style>
+
+
+    <!-- Style Switch -->
+    <style name ="CustomSwitch" parent="Widget.AppCompat.CompoundButton.Switch">
+        <item name="android:thumbTint">@color/splash_bgr</item>
+        <item name="android:trackTint">@color/splash_bgr</item>
+        <item name="android:backgroundTint">@color/splash_bgr</item>
+    </style>
+
 </resources>
