--- a/Java/AppClientes/app/src/main/res/layout/activity_cadastro.xml
+++ b/Java/AppClientes/app/src/main/res/layout/activity_cadastro.xml
@@ -58,7 +58,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView android:id="@+id/txtCadastroNovoUsuario"
+                    <TextView
+                        android:id="@+id/txtCadastroNovoUsuario"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="16dp"
@@ -67,7 +68,8 @@
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
-                    <androidx.appcompat.widget.SwitchCompat android:id="@+id/switchPjPF"
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchPjPF"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layoutDirection="rtl"
@@ -75,7 +77,8 @@
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
-                    <EditText android:id="@+id/editNomeCompleto"
+                    <EditText
+                        android:id="@+id/editNomeCompleto"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -86,7 +89,8 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <EditText android:id="@+id/editCpfCnpj"
+                    <EditText
+                        android:id="@+id/editCpfCnpj"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -97,7 +101,8 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <EditText android:id="@+id/editEndereco"
+                    <EditText
+                        android:id="@+id/editEndereco"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -108,7 +113,8 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <EditText android:id="@+id/editComplementoEnd"
+                    <EditText
+                        android:id="@+id/editComplementoEnd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -119,7 +125,8 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <EditText android:id="@+id/editCadastroEmail"
+                    <EditText
+                        android:id="@+id/editCadastroEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -131,7 +138,8 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <EditText android:id="@+id/editSenha"
+                    <EditText
+                        android:id="@+id/editSenha"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -143,7 +151,8 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <EditText android:id="@+id/editConfirmarSenha"
+                    <EditText
+                        android:id="@+id/editConfirmarSenha"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
