--- a/Java/AppClientes/app/src/main/res/layout/fragment_adicionar_cliente_cards.xml
+++ b/Java/AppClientes/app/src/main/res/layout/fragment_adicionar_cliente_cards.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ModeloAzulFragment">
+    tools:context=".view.AdicionarClienteCardsFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -58,6 +58,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
+
+
                     <TextView
                         android:id="@+id/txtPerfilContato"
                         android:layout_width="match_parent"
@@ -66,6 +68,15 @@
                         android:gravity="center"
                         android:text="@string/txtPerfilContato"
                         android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/switchPjPFCli"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layoutDirection="rtl"
+                        android:text="Pessoa Física"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <EditText
@@ -102,6 +113,19 @@
                         android:layout_marginEnd="8dp"
                         android:gravity="left"
                         android:hint="Email"
+                        android:inputType="textEmailAddress"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/editDocumento"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:gravity="left"
+                        android:hint="CPF"
                         android:inputType="textEmailAddress"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -259,6 +283,7 @@
                         android:layout_height="wrap_content"
                         style="@style/CustomizeButton"
                         android:text="CANCELAR"
+                        android:onClick="btnCancelar"
                         android:layout_marginEnd="16dp"/>
 
                     <androidx.appcompat.widget.AppCompatButton
@@ -266,6 +291,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/CustomizeButton"
+                        android:onClick="btnSalvar"
                         android:text="SALVAR" />
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
