--- a/Java/AppClientes/app/src/main/res/layout/app_bar_main.xml
+++ b/Java/AppClientes/app/src/main/res/layout/app_bar_main.xml
@@ -31,6 +31,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_btn_speak_now" />
+        app:srcCompat="@android:drawable/ic_dialog_info" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
