--- a/Java/AppClientes/app/src/main/res/menu/menu.xml
+++ b/Java/AppClientes/app/src/main/res/menu/menu.xml
@@ -10,7 +10,7 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_sair"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
