--- a/Java/AppClientes/app/src/main/res/layout/activity_recuperar_senha.xml
+++ b/Java/AppClientes/app/src/main/res/layout/activity_recuperar_senha.xml
@@ -42,7 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="@string/txt_RecuperarSenhaTelefone"
+                    android:text="@string/txt_RecuperarSenhaEmail"
                     android:textStyle="bold" />
 
                 <EditText
@@ -52,8 +52,8 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
-                    android:hint="@string/txtExemploTelefone"
-                    android:inputType="phone"
+                    android:hint="@string/txtExemploEmail"
+                    android:inputType="textEmailAddress"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -74,6 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
+                android:onClick="btnRecuperarSenha"
                 android:text="@string/txt_recuperar_senha" />
 
             <androidx.appcompat.widget.AppCompatButton
@@ -81,6 +82,7 @@
                 style="@style/CustomizeButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="btnVoltarMain"
                 android:text="@string/txtVoltar"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
