--- a/Java/AppClientes/app/src/main/res/layout/fragment_listar_cliente_item.xml
+++ b/Java/AppClientes/app/src/main/res/layout/fragment_listar_cliente_item.xml
@@ -42,6 +42,34 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:text="Telefone" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imgEye"
+                    android:layout_width="0dp"
+                    android:layout_height="20dp"
+                    android:layout_weight="1"
+                    android:contentDescription="Mostrar informações"
+                    android:src="@drawable/eye_on" />
+                <ImageView
+                    android:id="@+id/imgEdit"
+                    android:layout_width="0dp"
+                    android:layout_height="20dp"
+                    android:layout_weight="1"
+                    android:contentDescription="Editar informações"
+                    android:src="@drawable/edit_icon" />
+                <ImageView
+                    android:id="@+id/imgDelete"
+                    android:layout_width="0dp"
+                    android:layout_height="20dp"
+                    android:layout_weight="1"
+                    android:contentDescription="Excluir informações"
+                    android:src="@drawable/delete_icon" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
         </LinearLayout>
 
 
